Git-2-Tfs Sync. 24c3b77 Merged PR 11798: #33009: Vessel details future requests status css  alignment issue has fixed; branch: master ***NO_CI***
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C31165

--- a/v2/shiptech/assets/sass/themes/defaultweb/smart-operator.scss
+++ b/v2/shiptech/assets/sass/themes/defaultweb/smart-operator.scss
@@ -1406,7 +1406,9 @@ label {
 	font-weight: lighter;
 	&.small-chip {
 		// width: 50px !important;
+		
 		width: auto !important;
+		padding: 5px !important;
 		height: 15px !important;
 		line-height: 10px;
 		color: #FFFFFF;
